--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 JWT_SECRET_KEY
 
-TYPEORM_CONNECTION=
-TYPEORM_HOST=
-TYPEORM_PORT=
-TYPEORM_USERNAME=
-TYPEORM_PASSWORD=
-TYPEORM_DATABASE=
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=localhost
+TYPEORM_PORT=5432
+TYPEORM_USERNAME=nestjs
+TYPEORM_PASSWORD=nestjspassword
+TYPEORM_DATABASE=nestjsdb
